# Tencent_Geek_Competition_4

./: 1378178.txt  Board.cpp  Board.h  BoardEvaluator.cpp  BoardEvaluator.h  Brick.h  BrickGenerator.cpp  BrickGenerator.h  CMakeLists.txt  README.md  Solver.cpp  Solver.h  String.cpp  String.h  TimerUtil.cpp  TimerUtil.h  main.cpp
